--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<!--[if lt IE 7]>
+<html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,16 +17,6 @@
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
     <link rel="stylesheet" href="app.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
 
     <style type="text/css">
         html, body, #map-canvas {
@@ -27,122 +25,169 @@
             margin: 0;
             padding: 0;
         }
-
     </style>
     <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4RfaYlHIj7Ers6mE0mUamZt8rU6xdvGI">
     </script>
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script><script type="text/javascript">
-        var rectangle;
-        var map;
+    <script type="text/javascript">
+        // This example displays a marker at the center of Australia.
+        // When the user clicks the marker, an info window opens.
 
+        //**
+        var MY_MAPTYPE_ID = 'custom_style';
+        //**
         function initialize() {
+            var myLatlng = new google.maps.LatLng(-36.8683083, 174.7766063);
 
-            var markers = [];
+
+            //DANIELS OBJ
+            // var DBobject = new etc();
+
+            //****** --- INTEGRATION WAS STARTING HERE LAST NIGHT OMFG*//
+
+            var featureOpts = [
+                {
+                    stylers: [
+                        {hue: '#1EAB00'},
+                        //{ visibility: 'simplified' },
+                        {gamma: 0.5},
+                        {weight: 0.5}
+                    ]
+                },
+                {
+                    elementType: 'labels',
+                    stylers: [
+                        {visibility: 'on'}
+                    ]
+                },
+                {
+                    featureType: 'road.highway',
+                    stylers: [
+                        {color: '#76826D'}
+                    ]
+                },
+                {
+                    featureType: 'road.local',
+                    stylers: [
+                        {color: '#93AD90'}
+                    ]
+                },
+                {
+                    featureType: 'water',
+                    stylers: [
+                        {color: '#4575AB'}
+                    ]
+                }
+            ];
+
+            //******
+
             var mapOptions = {
-                center: {lat: -36.8688391, lng: 174.7769032},
-                zoom: 10
+                zoom: 14,
+                center: myLatlng,
+                //***
+                mapTypeControlOptions: {
+                    mapTypeIds: [google.maps.MapTypeId.ROADMAP, MY_MAPTYPE_ID]
+                },
+                mapTypeId: MY_MAPTYPE_ID
+                //***
             };
 
-            var map = new google.maps.Map(document.getElementById('map-canvas'),
-                    mapOptions);
+            var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 
-            var bounds = new google.maps.LatLngBounds(
-                    new google.maps.LatLng(-36.94982125750887, 175.67339384882814),
-                    new google.maps.LatLng(-36.568595617872504, 173.9293142589844)
-            );
+//****
+            var styledMapOptions = {
+                name: 'Custom Style'
+            };
 
+            var customMapType = new google.maps.StyledMapType(featureOpts, styledMapOptions);
+            map.mapTypes.set(MY_MAPTYPE_ID, customMapType);
+//****
 
-            google.maps.event.addListener(map, 'bounds_changed', function () {
-                var bounds = map.getBounds();
+            var contentString = "asd";
 
-                console.log(bounds.getNorthEast());
-                console.log("awd");
-                console.log(bounds.getSouthWest());
+            /*
+             '<div id="content">'+
+             '<div id="siteNotice">'+
+             '</div>'+
+             '<h1 id="firstHeading" class="firstHeading">New Market</h1>'+
+             '<div id="bodyContent">'+
+             '<p><b>test blahblah</b></p>'+
+             '<a href="http://newmarket.co.nz"> </a>' +
+             '</div>'+
+             '</div>';
+             */
 
-
+            var infowindow = new google.maps.InfoWindow({
+                content: contentString
             });
 
-            //infoWindow = new google.maps.InfoWindow();
+            //var tradeMeData = fakeDB();
+           // console.log(tradeMeData);
+            $.getJSON("data/newmarket_properties.json", function (json) {
+               var tradeMeData = json.list;
+                console.log(json);
+//            var marker = new google.maps.Marker({
+//                position: newmarket_properties.list[0].GeographicLocation.Latitude ,
+//                map: map,
+//                title: 'NewMarket'
+//            });
+              //  tradeMeData.forEach(function (tm) {
+                json.List.forEach(function(tm){
+                    var geo = tm.GeographicLocation;
+                    var myLatlng2 = new google.maps.LatLng(geo.Latitude, geo.Longitude);
 
+                    var marker = new google.maps.Marker({
+                        position: myLatlng2,
+                        map: map,
+                        title: 'NewMarket House'
+
+
+                    });
+                    google.maps.event.addListener(marker, 'click', function () {
+                        infowindow.open(map, marker);
+                    });
+                });
+            });
 
         }
+
         google.maps.event.addDomListener(window, 'load', initialize);
+
+        function fakeDB() {
+//      var myFakeStuff = {latitude: -36.8683085, longitude: 174.7766065, url: "http://www.google.com"};
+//      var myFakeStuff2 = {latitude: -36.8683086, longitude: 174.775, url: "http://www.google.com"};
+//      var arrayOfStuff = [];
+//      arrayOfStuff[0] = myFakeStuff;
+//      arrayOfStuff[1] = myFakeStuff2;
+         //  .responseJSON;
+            //return arrayOfStuff;
+        }
 
 
     </script>
 
 </head>
 <body>
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">HouseIt</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <form class="navbar-form navbar-left" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
-
 
 <div id="map-canvas"></div>
-<ul class="menu">
+<!--<ul class="menu">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
-</ul>
+  </ul>
+
+  <!--[if lt IE 7]>
+<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+<![endif]-->
 
 <div ng-view></div>
 
-<div>Angular seed app: v<span app-version></span></div>
+<!--<div>Angular seed app: v<span app-version></span></div>
 
-<!-- In production use:
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
--->
+ <!-- In production use:
+ <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
+ -->
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="app.js"></script>
@@ -151,6 +196,6 @@
 <script src="components/version/version.js"></script>
 <script src="components/version/version-directive.js"></script>
 <script src="components/version/interpolate-filter.js"></script>
-
+<script src="bower_components/html5-boilerplate/dist/js/vendor/jquery-1.11.3.min.js"></script>
 </body>
 </html>
