--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
         <div class="col-xs-3 vertical_center">
             <h2>HouseIt</h2>
             <div id="panel">
-                <p><button name=btn-suburb" adress= "Newmarket, Auckland" onclick = "codeAddress()">Suburb</button></p>
+                <p><button name=btn-suburb" address= "Newmarket, Auckland" onclick = "codeAddress()">Suburb</button></p>
+
 
                 <!--<input id="address" type="textbox" value="newmarket, auckland">
                 <input type="button" value="Search" onclick="codeAddress()">-->
