--- a/index.html
+++ b/index.html
@@ -92,14 +92,12 @@
     <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4RfaYlHIj7Ers6mE0mUamZt8rU6xdvGI">
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
     <script type="text/javascript">
         // This example displays a marker at the center of Australia.
         // When the user clicks the marker, an info window opens.
         //Newmarket position: -36.8683083, 174.7766063
         //**
         var MY_MAPTYPE_ID = 'custom_style';
-        var geocoder;
         //**
         function initialize() {
             var myLatlng = new google.maps.LatLng(-36.8630231,174.8654693);
@@ -159,19 +157,8 @@
                 //***
             };
 
-            function codeAddress() {
-                var address = document.getElementById("address").value;
-                geocoder.geocode( { 'address': address}, function(results, status) {
-                    if (status == google.maps.GeocoderStatus.OK) {
-                        map.setCenter(results[0].geometry.location);
-                        var marker = new google.maps.Marker({
-                            map: map,
-                            position: results[0].geometry.location,
-                        });
-                    } else {
-                        alert("Geocode was not successful for the following reason: " + status);
-                    }
-                });
+            function zoomMap() {
+                map.
             }
 
             var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
@@ -232,10 +219,6 @@
             });
 
         }
-        $(function () {
-            $('button[name="btn-suburb"]').click(codeAddress());
-        });
-
 
         google.maps.event.addDomListener(window, 'load', initialize);
 
@@ -260,11 +243,7 @@
         <div class="col-xs-3 vertical_center">
             <h2>HouseIt</h2>
             <div id="panel">
-                <p><button name=btn-suburb" address= "Newmarket, Auckland" onclick = "codeAddress()">Suburb</button></p>
-
-
-                <!--<input id="address" type="textbox" value="newmarket, auckland">
-                <input type="button" value="Search" onclick="codeAddress()">-->
+                <p><button name=btn-suburb"  onClick = "zoomMap()">Suburb</button></p>
             </div>
         </div>
         <div class="col-xs-9"><!--map-canvas will be postioned here--></div>
@@ -282,8 +261,6 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="app.js"></script>
-<script src="view1/view1.js"></script>
-<script src="view2/view2.js"></script>
 <script src="components/version/version.js"></script>
 <script src="components/version/version-directive.js"></script>
 <script src="components/version/interpolate-filter.js"></script>
