--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="app.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 
+    <!--JQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
@@ -18,7 +21,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
 
 
     <style type="text/css">
@@ -90,6 +93,8 @@
         //Newmarket position: -36.8683083, 174.7766063
         //**
         var MY_MAPTYPE_ID = 'custom_style';
+        var map;
+        varLatLng;
         //**
         function initialize() {
             var myLatlng = new google.maps.LatLng(-36.8630231,174.8654693);
@@ -143,12 +148,8 @@
                 //***
             };
 
-            function zoomMap() {
-                map.setZoom(14);
-            };
 
-
-            var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+            map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 
             var styledMapOptions = {
                 name: 'Custom Style'
@@ -191,6 +192,11 @@
                 });
             });
         }
+        function zoomMap(zoomLevel, lat, lng) {
+            map.setCenter(new google.maps.LatLng(lat,lng));
+            map.setZoom(zoomLevel);
+        }
+
 
         google.maps.event.addDomListener(window, 'load', initialize);
 
@@ -204,9 +210,8 @@
     <div class="row">
         <div class="col-xs-3 vertical_center">
             <h2>HouseIt</h2>
-            <div id="panel">
-                <p><button name=btn-suburb"  onclick = "zoomMap()">Suburb</button></p>
-            </div>
+                <p><button name="btn-suburb"  onclick = "zoomMap(14, -36.8683083, 174.7766063)">Suburb</button></p>
+
         </div>
         <div class="col-xs-9"><!--map-canvas will be postioned here--></div>
         <div id="map-canvas"></div>
