--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="col-xs-3 vertical_center">
             <h2>HouseIt</h2>
             <div id="panel">
-                <p><button name=btn-suburb"  onclick = "zoomMap()">Suburb</button></p>
+                <p><button name=btn-suburb"  onclick = "zoomMap(14,-36.8683083, 174.7766063)">Suburb</button></p>
             </div>
 
             <p> Number of Sales in New Market (last 3 months)
