--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="js/map_func.js"></script>
 
 
 
@@ -191,11 +192,6 @@
                 });
             });
         }
-        function zoomMap(zoomLevel, lat, lng) {
-            map.setCenter(new google.maps.LatLng(lat,lng));
-            map.setZoom(zoomLevel);
-        }
-
 
         google.maps.event.addDomListener(window, 'load', initialize);
 
