Moved map update functions

--- a/index.html
+++ b/index.html
@@ -96,12 +96,9 @@
 
             var customMapType = new google.maps.StyledMapType(featureOpts, styledMapOptions);
             map.mapTypes.set(MY_MAPTYPE_ID, customMapType);
-//****
 
         }
         google.maps.event.addDomListener(window, 'load', initialize);
-
-
     </script>
 
 </head>
@@ -111,7 +108,8 @@
     <div class="row">
         <div class="col-md-2 vertical_center">
             <h2>HouseIt</h2>
-            <p><button name=btn-suburb"  onclick = "zoomMap(14,-36.8683083, 174.7766063), fuckShit()">Suburb</button></p>
+            <!--<p><button name=btn-suburb"  onclick = "zoomMap(14,-36.8683083, 174.7766063), fuckShit()">Suburb</button></p>-->
+            <p><button name=btn-suburb"  onclick = "update_map('Newmarket')">Suburb</button></p>
             
 
             <p> Number of Sales in current suburb(last 3 months)
@@ -152,7 +150,7 @@
  -->
 <!--<script src="bower_components/angular/angular.js"></script>-->
 <!--<script src="bower_components/angular-route/angular-route.js"></script>-->
-<!--<script src="app.js"></script>-->
+<script src="js/app.js"></script>
 <script src="components/version/version.js"></script>
 <script src="components/version/version-directive.js"></script>
 <script src="components/version/interpolate-filter.js"></script>
