--- a/index.html
+++ b/index.html
@@ -109,40 +109,40 @@
 <body onload="initialize()">
 
 <div class="container-fluid" id="main">
-    <div class="row">
-        <div class="col-md-2 vertical_center">
-            <h2>HouseIt</h2>
-            <p><button name=btn-suburb"  onclick = "zoomMap(14,-36.8683083, 174.7766063), fuckShit()">Suburb</button></p>
-            
+    <div class="row body">
+        <div class="col-lg-2 col-sm-4 col-xs-12 vertical_center left-side">
+           <div class = "row"></div>
+            <div class = "row">
+               <img src="img/logo.png" class="img-responsive" alt="Logo">
+            <p><button name="btn-suburb"  onclick = "zoomMap(14,-36.8683083, 174.7766063), fuckShit()">Suburb</button></p>
+               <p> Number of Sales in current suburb(last 3 months)
+               <ul id="num_sales"></ul>
+               <script>
+                   $("#num_sales").append("<li>" + suburb_data[0].num_sales + "</li>")
+               </script>
+               </p>
 
-            <p> Number of Sales in current suburb(last 3 months)
-                <ul id="num_sales"></ul>
-            <script>
-                $("#num_sales").append("<li>" + suburb_data[0].num_sales + "</li>")
-            </script>
-            </p>
+               <p> prices sold (last 3 months)
+               <ul id="cv_price"></ul>
+               <script>
+                   $("#cv_price").append("<li>" + suburb_data[0].median_price + "</li>")
+               </script>
+               </p>
 
-            <p> prices sold (last 3 months)
-            <ul id="cv_price"></ul>
-            <script>
-                $("#cv_price").append("<li>" + suburb_data[0].median_price + "</li>")
-            </script>
-            </p>
-
-            <p> CV difference in percentage
-            <ul id="cv_difference"></ul>
-            <script>
-                $("#cv_difference").append("<li>" + "+" + suburb_data[0].cv_difference + "%" + "</li>")
-            </script>
-            </p>
+               <p> CV difference in percentage
+               <ul id="cv_difference"></ul>
+               <script>
+                   $("#cv_difference").append("<li>" + "+" + suburb_data[0].cv_difference + "%" + "</li>")
+               </script>
+               </p>
+           </div>
         </div>
-
-        <div class="col-md-8" style = "height: 100%">
+        <div class="col-lg-10 col-sm-4 col-xs-12" style = "height: 100%">
             <div id="map-canvas" style = "height: 100%; width:100%;"></div>
         </div>
-        <div class = "col-md-2 vertical_center">
-        </div>
-    </div>
+        <!--<div id= "footer" class = "col-lg-2 col-sm-4 col-xs-12 vertical_center left-side">-->
+
+        <!--</div>-->
 </div>
 
 <!--<div ng-view></div>-->
