--- a/index.html
+++ b/index.html
@@ -115,8 +115,6 @@
             <div class = "row">
                <img src="img/logo.png" class="img-responsive" alt="Logo">
                 <p><button name=btn-suburb"  onclick = "update_map('Newmarket')">Suburb</button></p>
-
-
                 <p> Number of Sales in current suburb(last 3 months)
                 <ul id="num_sales"></ul>
                 <script>
@@ -137,6 +135,7 @@
                     $("#cv_difference").append("<li>" + "+" + suburb_data[0].cv_difference + "%" + "</li>")
                 </script>
                 </p>
+            </div>
             </div>
         <div class="col-lg-10 col-sm-4 col-xs-12" style = "height: 100%">
             <div id="map-canvas" style = "height: 100%; width:100%;"></div>
