--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
         <!--<div id= "footer" class = "col-lg-2 col-sm-4 col-xs-12 vertical_center left-side">-->
 
-        <!--</div>-->
+        </div>
 </div>
 
 <!--<div ng-view></div>-->
