Add link to Trademe

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                <img src="img/logo.png" class="img-responsive" alt="Logo">
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        Dropdown
+                        Pick a suburb
                         <span class="caret"></span>
                     </button>
                     <ul id="suburb-selector" class="dropdown-menu" aria-labelledby="dropdownMenu1">
