Info update based on suburb

--- a/index.html
+++ b/index.html
@@ -127,21 +127,21 @@
                 <p> Number of Sales in current suburb(last 3 months)
                 <ul id="num_sales"></ul>
                 <script>
-                    $("#num_sales").append("<li>" + suburb_data[0].num_sales + "</li>")
+                 //   $("#num_sales").append("<li>" + suburb_data[0].num_sales + "</li>")
                 </script>
                 </p>
 
                 <p> prices sold (last 3 months)
                 <ul id="cv_price"></ul>
                 <script>
-                    $("#cv_price").append("<li>" + suburb_data[0].median_price + "</li>")
+                    //$("#cv_price").append("<li>" + suburb_data[0].median_price + "</li>")
                 </script>
                 </p>
 
                 <p> CV difference in percentage
                 <ul id="cv_difference"></ul>
                 <script>
-                    $("#cv_difference").append("<li>" + "+" + suburb_data[0].cv_difference + "%" + "</li>")
+                    //$("#cv_difference").append("<li>" + "+" + suburb_data[0].cv_difference + "%" + "</li>")
                 </script>
                 </p>
             </div>
