--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <div class="container-fluid" id="main">
     <div class="row body">
         <div class="col-lg-2 col-sm-4 col-xs-12 vertical_center left-side">
-           <div class = "row"></div>
+           <div class = "row" style ="height:30%;"></div>
             <div class = "row">
                <img src="img/logo.png" class="img-responsive" alt="Logo">
                 
@@ -123,23 +123,23 @@
                         <li><a href="#">Ponsonby</a></li>
                     </ul>
                 </div>
-                <p> Number of Sales in current suburb(last 3 months)
+                <div id= "content" style = "display:none;">
+                    <h2>Newmarket</h2>
+                <p> Number of Sales in Current Suburb(last 3 months)
                 <ul id="num_sales"></ul>
                 <script>
                  //   $("#num_sales").append("<li>" + suburb_data[0].num_sales + "</li>")
                 </script>
                 </p>
 
-                <div id= "content" style = "display:none;">
-                        <h2 class = "h2_font">Newmarket</h2>
-                    <p> prices sold (last 3 months)
-                    <ul id="cv_price"></ul>
+                    <p> Median Price Sold For (last 3 months)
+                    <ul id="cv_price">$</ul>
                     <script>
                         //$("#cv_price").append("<li>" + suburb_data[0].median_price + "</li>")
                     </script>
                     </p>
     
-                    <p> CV difference in percentage
+                    <p> % Difference in CV
                     <ul id="cv_difference"></ul>
                     <script>
                         //$("#cv_difference").append("<li>" + "+" + suburb_data[0].cv_difference + "%" + "</li>")
@@ -147,6 +147,11 @@
                     </p>
                 </div>
             </div>
+            <div class="row">
+                <a href="http//www.trademe.co.nz/property" target = "_blank">
+                    <img src="img/trade-me-property.png" class="img-responsive" alt="TradeMe">
+                </a>
+        </div>
         </div>
         <div class="col-lg-10 col-sm-4 col-xs-12" style = "height: 100%">
             <div id="map-canvas" style = "height: 100%; width:100%;"></div>
