--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="col-lg-2 col-sm-4 col-xs-12 vertical_center left-side">
            <div class = "row" style ="height:30%;"></div>
             <div class = "row">
-               <img src="img/logo.png" class="img-responsive" alt="Logo">
+               <img src="img/logo.png" class="img-responsive center-block" alt="Logo">
                 
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -149,7 +149,7 @@
             </div>
             <div class="row">
                 <a href="http//www.trademe.co.nz/property" target = "_blank">
-                    <img src="img/trade-me-property.png" class="img-responsive" alt="TradeMe">
+                    <img src="img/trade-me-property.png" class="img-responsive center-block" alt="TradeMe">
                 </a>
         </div>
         </div>
