--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>My AngularJS App</title>
+    <title>HouseIt</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="app.css">
@@ -108,7 +108,7 @@
 
 <div class="container-fluid" id="main">
     <div class="row body">
-        <div class="col-lg-2 col-sm-4 col-xs-12 vertical_center left-side">
+        <div class="col-lg-2 col-sm-12 col-xs-12 vertical_center left-side">
            <div class = "row" style ="height:30%;"></div>
             <div class = "row">
                <img src="img/logo.png" class="img-responsive center-block" alt="Logo">
@@ -124,8 +124,8 @@
                     </ul>
                 </div>
                 <div id= "content" style = "display:none;">
-                    <h2>Newmarket</h2>
-                <p> Number of Sales in Current Suburb(last 3 months)
+                    <h2 class="h2_font">Newmarket</h2>
+                <p>Number of Sales in Current Suburb(last 3 months)
                 <ul id="num_sales"></ul>
                 <script>
                  //   $("#num_sales").append("<li>" + suburb_data[0].num_sales + "</li>")
@@ -153,7 +153,7 @@
                 </a>
         </div>
         </div>
-        <div class="col-lg-10 col-sm-4 col-xs-12" style = "height: 100%">
+        <div class="col-lg-10 col-sm-12 col-xs-12" style = "height: 100%">
             <div id="map-canvas" style = "height: 100%; width:100%;"></div>
         </div>
         <!--<div id= "footer" class = "col-lg-2 col-sm-4 col-xs-12 vertical_center left-side">-->
