--- a/index.html
+++ b/index.html
@@ -21,88 +21,12 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="js/map_func.js"></script>
+    <script src="js/GoogleMaps.js"></script>
 
 
     <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4RfaYlHIj7Ers6mE0mUamZt8rU6xdvGI">
     </script>
-    <script type="text/javascript">
-        // This example displays a marker at the center of Australia.
-        // When the user clicks the marker, an info window opens.
-        //Newmarket position: -36.8683083, 174.7766063
-        //**
-        var MY_MAPTYPE_ID = 'custom_style';
-        var map;
-        //**
-        function initialize() {
-            var myLatlng = new google.maps.LatLng(-36.8630231,174.8654693);
-            geocoder = new google.maps.Geocoder();
-
-            var featureOpts = [
-                {
-                    stylers: [
-                        {hue: '#1EAB00'},
-                        //{ visibility: 'simplified' },
-                        {gamma: 0.5},
-                        {weight: 0.5}
-                    ]
-                },
-                {
-                    elementType: 'labels',
-                    stylers: [
-                        {visibility: 'on'}
-                    ]
-                },
-                {
-                    featureType: 'road.highway',
-                    stylers: [
-                        {color: '#76826D'}
-                    ]
-                },
-                {
-                    featureType: 'road.local',
-                    stylers: [
-                        {color: '#93AD90'}
-                    ]
-                },
-                {
-                    featureType: 'water',
-                    stylers: [
-                        {color: '#678B9C'}
-                    ]
-                }
-            ];
-
-            //******
-
-            var mapOptions = {
-                zoom: 11,
-                center: myLatlng,
-                //***
-                mapTypeControlOptions: {
-                    mapTypeIds: [google.maps.MapTypeId.ROADMAP, MY_MAPTYPE_ID]
-                },
-                mapTypeId: MY_MAPTYPE_ID
-            };
-            
-            map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-
-            var styledMapOptions = {
-                name: 'Custom Style'
-            };
-
-            var customMapType = new google.maps.StyledMapType(featureOpts, styledMapOptions);
-            map.mapTypes.set(MY_MAPTYPE_ID, customMapType);
-//****
-
-
-        }
-        google.maps.event.addDomListener(window, 'load', initialize);
-
-
-    </script>
-
 </head>
 <body onload="initialize()">
 
@@ -127,23 +51,12 @@
                     <h2 class="h2_font">Newmarket</h2>
                 <p>Number of Sales in Current Suburb(last 3 months)
                 <ul id="num_sales"></ul>
-                <script>
-                 //   $("#num_sales").append("<li>" + suburb_data[0].num_sales + "</li>")
-                </script>
                 </p>
-
                     <p> Median Price Sold For (last 3 months)
                     <ul id="cv_price">$</ul>
-                    <script>
-                        //$("#cv_price").append("<li>" + suburb_data[0].median_price + "</li>")
-                    </script>
                     </p>
-    
                     <p> % Difference in CV
                     <ul id="cv_difference"></ul>
-                    <script>
-                        //$("#cv_difference").append("<li>" + "+" + suburb_data[0].cv_difference + "%" + "</li>")
-                    </script>
                     </p>
                 </div>
             </div>
@@ -156,9 +69,7 @@
         <div class="col-lg-10 col-sm-12 col-xs-12" style = "height: 100%">
             <div id="map-canvas" style = "height: 100%; width:100%;"></div>
         </div>
-        <!--<div id= "footer" class = "col-lg-2 col-sm-4 col-xs-12 vertical_center left-side">-->
-
-        </div>
+    </div>
 </div>
 
 <!--<div ng-view></div>-->
@@ -169,7 +80,7 @@
  -->
 <!--<script src="bower_components/angular/angular.js"></script>-->
 <!--<script src="bower_components/angular-route/angular-route.js"></script>-->
-<script src="js/app.js"></script>
+<script src="js/TradeMeAPI.js"></script>
 <script src="components/version/version.js"></script>
 <script src="components/version/version-directive.js"></script>
 <script src="components/version/interpolate-filter.js"></script>
