--- a/trademe_listings.html
+++ b/trademe_listings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/TradeMeAPI.js"></script>
 </head>
 <body>
 
